--- a/assets/css/sfwp2l.css
+++ b/assets/css/sfwp2l.css
@@ -1,29 +1,21 @@
 /* SalesForce WordPress to Lead Default CSS */
 
-form.w2llead{ text-align:left; clear:both;}
-.w2llabel, .w2linput { display:block; float:left; }
-.w2llabel.error { color:#f00; }
-.w2llabel { clear:left; margin:4px 0; width:50%; }
-.w2linput.text{ width:50%; height:18px; margin:4px 0; }
-.w2linput.textarea { clear:both; width:100%; height:75px; margin:10px 0;}
-.w2lsubmit{ float:none; clear:both; }
-.w2linput.submit { float:none; margin: 10px 0 0 0; clear:both;}
+.salesforce_w2l_lead form.w2llead{ text-align:left; clear:both;}
+.salesforce_w2l_lead #salesforce{ margin: 3px 0 0 0; color: #aaa; }
+.salesforce_w2l_lead #salesforce a{ color: #999; }
 
-.sf_field span.error_message{
-	clear: left;
-	display: block;
-	color: red;
-	font-size: 80%;
-}
+.salesforce_w2l_lead .w2llabel, .w2linput { display:block; float:left; }
+.salesforce_w2l_lead .w2llabel.error { color:#f00; }
+.salesforce_w2l_lead .w2llabel { clear:left; margin:4px 0; width:50%; }
+.salesforce_w2l_lead .w2linput.text{ width:50%; height:18px; margin:4px 0; }
+.salesforce_w2l_lead .w2linput.textarea { clear:both; width:100%; height:75px; margin:10px 0;}
+.salesforce_w2l_lead .w2lsubmit{ float:none; clear:both; }
+.salesforce_w2l_lead .w2linput.submit { float:none; margin: 10px 0 0 0; clear:both;}
+.salesforce_w2l_lead .w2llabel.checkbox, .salesforce_w2l_lead .w2linput.checkbox{ display: inline-block; float: none; }
+.salesforce_w2l_lead .w2llabel.checkbox{ clear: none; margin: 0; }
 
-.w2llabel.checkbox, .w2linput.checkbox{ display: inline-block; float: none; }
-.sf_field, .sf_type_checkbox{ clear: both; }
-.w2llabel.checkbox{ clear: none; margin: 0; }
-
-.w2limg{ display: block; clear: both; }
-#salesforce{ margin:3px 0 0 0; color:#aaa; }
-#salesforce a{ color:#999; }
-span.required { font-weight: bold; }
+.salesforce_w2l_lead .w2limg{ display: block; clear: both; }
+.salesforce_w2l_lead span.required { font-weight: bold; }
 
 .sidebar .w2linput, #sidebar .w2llabel{ float:none; display:inline; }
 .sidebar .w2llabel.error { color:#f00; }
@@ -33,3 +25,5 @@ span.required { font-weight: bold; }
 .sidebar .w2lsubmit{ float:none; clear:both; }
 .sidebar .w2linput.submit { margin:10px 0 0 0; }
 
+.salesforce_w2l_lead .sf_field, .sf_type_checkbox{ clear: both; }
+.salesforce_w2l_lead .sf_field span.error_message{ clear: left; display: block; color: red; font-size: 80%; }
