--- a/assets/css/sfwp2l.css
+++ b/assets/css/sfwp2l.css
@@ -13,6 +13,9 @@
 .salesforce_w2l_lead .w2linput.submit { float:none; margin: .75em 0 0 0; clear:both;}
 .salesforce_w2l_lead .w2llabel.checkbox, 
 .salesforce_w2l_lead .w2linput.checkbox{ display: inline-block; float: none; }
+.salesforce_w2l_lead .sf_type_checkbox input{ width: 1.25em; }
+
+
 .salesforce_w2l_lead .w2llabel.checkbox{ clear: none; margin: 0; }
 .salesforce_w2l_lead .w2linput.textarea, .salesforce_w2l_lead .w2linput.text { font-size: inherit; }
 
