Styling fix for 2016 theme
Signed-off-by: Nick Ciske <nick@thoughtrefinery.com>

--- a/assets/css/sfwp2l.css
+++ b/assets/css/sfwp2l.css
@@ -105,6 +105,12 @@
     width: auto;
 }
 
+/* Styling Fix for Twenty Sixteen Theme */
+.w2llead.sidebar{
+	margin-left: auto;
+	width: 100%;
+}
+
 .salesforce_w2l_lead .placeholders .w2linput {
 }
 
