--- a/assets/css/sfwp2l.css
+++ b/assets/css/sfwp2l.css
@@ -262,3 +262,26 @@
 	display: block;
 	float: none;
 }
+
+/* Two Column Layout */
+
+.salesforce_w2l_lead.sf_two_column .sf_field{
+	clear: none;
+}
+
+.salesforce_w2l_lead.sf_two_column .w2linput.text, .salesforce_w2l_lead.sf_two_column .w2linput.select, .salesforce_w2l_lead.sf_two_column .w2linput.date{
+	width: 90%;
+}
+
+.salesforce_w2l_lead.sf_two_column .sf_type_text, .salesforce_w2l_lead.sf_two_column .sf_type_select, .salesforce_w2l_lead.sf_two_column .sf_type_multi-select, .salesforce_w2l_lead.sf_two_column .sf_type_checkbox, .salesforce_w2l_lead.sf_two_column .sf_type_date{
+	width: 50%;
+	float: left;
+}
+
+.salesforce_w2l_lead.sf_two_column .w2linput.textarea{
+	width: 95%;
+}
+
+.salesforce_w2l_lead.sf_two_column .sf_cc_user, .salesforce_w2l_lead.sf_two_column .sf_type_recaptcha, .salesforce_w2l_lead.sf_two_column .sf_type_captcha, .salesforce_w2l_lead.sf_two_column .sf_type_html{
+	clear: both;
+}
